[UPDATE] modal image in postpage

--- a/assets/static/sass/_style.scss
+++ b/assets/static/sass/_style.scss
@@ -27,6 +27,7 @@
 @import "./components/post/line_numbers";
 @import "./components/post/toc";
 @import "./components/post/adjacent_post";
+@import "./components/post/modal";
 
 @import "./components/portfolio/banner";
 
