--- a/assets/static/style.css
+++ b/assets/static/style.css
@@ -928,6 +928,8 @@ aside nav > ul .collapsible-category ul a {
   font-size: 1.3rem;
   line-height: 1.5;
   padding: 0 4rem;
+  display: flex;
+  flex-flow: column;
 }
 .postpage article .post-content h1,
 .postpage article .post-content h2,
@@ -948,7 +950,6 @@ aside nav > ul .collapsible-category ul a {
   margin-bottom: 1rem;
 }
 .postpage article .post-content h1 {
-  margin-top: 1.2rem;
   position: relative;
   font-size: 2.5rem;
 }
@@ -962,7 +963,6 @@ aside nav > ul .collapsible-category ul a {
   color: rgba(27, 177, 89, 0.7);
 }
 .postpage article .post-content h2 {
-  margin-top: 1.2rem;
   font-size: 2.2rem;
 }
 .postpage article .post-content h3 {
@@ -986,6 +986,12 @@ aside nav > ul .collapsible-category ul a {
 }
 .postpage article .post-content a:hover {
   color: #2fd171;
+}
+.postpage article .post-content img {
+  max-width: 80%;
+  text-align: center;
+  margin-bottom: 1rem;
+  align-self: center;
 }
 .postpage article .post-content ul li {
   list-style-type: none;
@@ -1237,6 +1243,41 @@ aside nav > ul .collapsible-category ul a {
 }
 .postpage .adjacent-posts .prev i {
   margin-right: 1rem;
+}
+
+.postpage .modal {
+  margin: 0;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 12;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 0.5s, visibility 0.5s;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+}
+.postpage .modal img {
+  max-width: 60vw;
+  max-height: 60vh;
+  box-shadow: 0 2px 10px 3px rgba(0, 0, 0, 0.3);
+}
+.postpage .modal figcaption {
+  margin-top: 0.8rem;
+  font-size: 1.4rem;
+  font-weight: bold;
+  font-style: italic;
+  color: rgba(255, 255, 255, 0.75);
+}
+.postpage .modal.hidden {
+  opacity: 0;
+  visibility: hidden;
 }
 
 .portfolio .banner {
