--- a/assets/static/sass/components/post/_post_content.scss
+++ b/assets/static/sass/components/post/_post_content.scss
@@ -2,13 +2,14 @@
   font-size: 1.3rem;
   line-height: 1.5;
   padding: 0 4rem;
+  display: flex;
+  flex-flow: column;
 
   @include header-margin-bottom(1.2rem);
   @include paragraph-margin-bottom(1rem);
   @include list-margin-bottom(1rem);
 
   h1 {
-    margin-top: 1.2rem;
     position: relative;
     font-size: 2.5rem;
   }
@@ -24,7 +25,6 @@
   }
 
   h2 {
-    margin-top: 1.2rem;
     font-size: 2.2rem;
   }
 
@@ -62,6 +62,13 @@
         $lightness: 10%
       );
     }
+  }
+
+  img {
+    max-width: 80%;
+    text-align: center;
+    margin-bottom: 1rem;
+    align-self: center;
   }
 
   ul li {
