--- a/assets/static/sass/components/post/_adjacent_post.scss
+++ b/assets/static/sass/components/post/_adjacent_post.scss
@@ -20,6 +20,7 @@
   h3 {
     margin: 0;
     font-size: 1.5rem;
+    transition: color 0.2s;
 
     &:hover {
       color: rgba($postpage-link-color, 1);
