--- a/assets/static/sass/helper/_variables.scss
+++ b/assets/static/sass/helper/_variables.scss
@@ -74,3 +74,11 @@ $post-font: "Maven Pro", "FakePearl", sans-serif;
 $brand-font: "Comfortaa", "Maven Pro", sans-serif;
 $mono-font: "Ubuntu Mono", monospace;
 $title-font: "Exo 2", "Maven Pro", sans-serif;
+
+$brk-x-huge: 1236px;
+$brk-huge: 1080px;
+$brk-large: 824px;
+$brk-medium: 720px;
+$brk-small: 668px;
+$brk-tiny: 480px;
+$brk-x-tiny: 320px;
