--- a/assets/static/sass/components/_navbar.scss
+++ b/assets/static/sass/components/_navbar.scss
@@ -9,10 +9,46 @@ header nav {
 
     font-size: 1.2rem;
 
+    @include brk-down($brk-x-huge) {
+      margin: 0 2rem;
+    }
+
+    @include brk-down($brk-small) {
+      margin: 0 1rem;
+      flex-flow: column;
+      position: relative;
+      height: 3.4rem;
+      // overflow-x: hidden;
+      // overflow-y: visible;
+    }
+
     li {
       display: inline-block;
       margin: 0.4rem 0;
       padding: 0 1rem;
+
+      @include brk-down($brk-small) {
+        &.option {
+          transition: transform 0.8s cubic-bezier(0.68, -0.55, 0.27, 1.55),
+            visibility 0.8s;
+          transform: translateX(120px);
+          align-self: flex-end;
+          margin-right: 0.8rem;
+          padding: 0.2rem 0;
+          position: relative;
+          z-index: 10;
+          visibility: collapse;
+        }
+
+        &.option.expanded {
+          visibility: visible;
+          transform: translateX(0);
+        }
+
+        &:nth-of-type(2) {
+          margin-top: 0.8rem;
+        }
+      }
 
       &.brand {
         margin-right: auto;
@@ -26,6 +62,26 @@ header nav {
 
       &:nth-of-type(n + 3) {
         border-left: 1px solid rgba($navbar-text-color, 0.4);
+
+        @include brk-down($brk-small) {
+          border-left: none;
+        }
+      }
+
+      &:last-of-type {
+        display: none;
+        color: $navbar-text-color;
+        border-left: none;
+        cursor: pointer;
+
+        @include brk-down($brk-small) {
+          display: unset;
+          position: absolute;
+          right: 0;
+          top: 10px;
+          margin-right: 0.8rem;
+          padding: 0;
+        }
       }
 
       &.active {
@@ -35,6 +91,45 @@ header nav {
       a {
         color: $navbar-text-color;
         text-decoration: none;
+      }
+    }
+  }
+}
+
+.home header nav {
+  background-color: transparent;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 5;
+
+  ul {
+    padding: 0.8rem 0;
+
+    li {
+      &:nth-of-type(n + 3) {
+        border-left: 1px solid rgba(white, 0.6);
+      }
+
+      @include brk-down($brk-small) {
+        &.option {
+          border-left: none;
+          padding: 0.2rem 0;
+        }
+      }
+
+      &:last-of-type {
+        color: rgba(white, 0.95);
+        border-left: none;
+        @include brk-down($brk-small) {
+          top: 14px;
+          padding: 0;
+        }
+      }
+
+      a {
+        color: rgba(white, 0.95);
       }
     }
   }
