--- a/assets/static/sass/components/homepage/_about.scss
+++ b/assets/static/sass/components/homepage/_about.scss
@@ -1,8 +1,24 @@
 .home .content .about {
+  @include brk-down($brk-tiny) {
+    .card .preview {
+      height: 12.5rem;
+    }
+  }
+
+  .card.name-card {
+    @include brk-down($brk-tiny) {
+      padding-top: 0;
+      padding-bottom: 0.8rem;
+      margin-bottom: 1.8rem;
+      border-bottom: 16px solid $about-ui-color;
+    }
+  }
+
   .card.profile-card {
     position: relative;
     background-image: url("./images/peashooter.jpg");
     background-size: cover;
+    background-position: center 40%;
     color: transparent;
 
     &:before {
@@ -32,16 +48,26 @@
     .preview {
       display: flex;
       flex-flow: column;
-      // justify-content: center;
+
       span {
         display: block;
         margin: 0.8rem 0;
+      }
+
+      @include brk-down($brk-small) {
+        height: auto;
       }
     }
 
     a {
       color: inherit;
       text-decoration: none;
+
+      @include brk-down($brk-medium) {
+        display: flex;
+        flex-flow: column;
+        align-items: center;
+      }
 
       &:hover {
         color: $about-card-link-color;
@@ -50,6 +76,24 @@
       i {
         transform: translateY(1px);
         margin-right: 0.4rem;
+
+        @include brk-down($brk-medium) {
+          margin: 0 0 0.4rem 0;
+          transform: translateY(2px);
+
+          &:after {
+            font-weight: normal;
+            font-family: $default-font;
+            margin-left: 0.8rem;
+          }
+
+          &.fa-paper-plane:after {
+            content: "E-mail";
+          }
+          &.fa-github-alt:after {
+            content: "GitHub";
+          }
+        }
       }
     }
   }
