--- a/assets/static/sass/components/homepage/_article_grid.scss
+++ b/assets/static/sass/components/homepage/_article_grid.scss
@@ -10,6 +10,13 @@
     @extend %deck-title-block;
   }
 
+  @include brk-down($brk-tiny) {
+    &:nth-child(4),
+    &:nth-child(5) {
+      display: none;
+    }
+  }
+
   &:last-child {
     @extend %deck-more-block;
 
@@ -34,7 +41,16 @@
 
   &:first-child {
     @extend %deck-title-block;
+    border-color: $hotpost-ui-color;
     grid-column: 3 / 3;
+
+    @include brk-down($brk-huge) {
+      grid-column: 2 / 2;
+    }
+
+    @include brk-down($brk-small) {
+      grid-column: unset;
+    }
 
     h2 {
       left: 5rem;
@@ -48,11 +64,26 @@
     }
   }
 
+  @include brk-down($brk-tiny) {
+    &:nth-child(4),
+    &:nth-child(5) {
+      display: none;
+    }
+  }
+
   &:last-child {
     @extend %deck-more-block;
     background-color: transparent;
     grid-row: 2 / 2;
     grid-column: 1 / 1;
+
+    @include brk-down($brk-huge) {
+      grid-row: 3 / 3;
+    }
+
+    @include brk-down($brk-small) {
+      grid-row: unset;
+    }
 
     &:hover {
       color: $hotpost-ui-color;
@@ -68,10 +99,26 @@
     @extend %deck-title-block;
     grid-column: 1 / 3;
 
+    @include brk-down($brk-large) {
+      // position: relative;
+      place-self: center center;
+    }
+
+    @include brk-down($brk-small) {
+      grid-column: unset;
+    }
+
     h2 {
       bottom: 6rem;
       right: 8rem;
       font-size: 3.2rem;
+
+      @include brk-down($brk-large) {
+        position: static;
+        display: flex;
+        flex-flow: column;
+        align-items: center;
+      }
     }
 
     h2:before {
@@ -79,12 +126,26 @@
       position: absolute;
       width: 8rem;
       height: 5.2rem;
-
       top: -5rem;
       left: -9rem;
 
       border: solid $about-ui-color;
       border-width: 24px 0 0 26px;
+
+      @include brk-down($brk-huge) {
+        top: -5rem;
+        left: -11rem;
+      }
+
+      @include brk-down($brk-large) {
+        top: -1.6rem;
+        left: -4rem;
+        border-width: 20px 0 0 20px;
+      }
+
+      @include brk-down($brk-tiny) {
+        display: none;
+      }
     }
 
     h2:after {
@@ -95,6 +156,16 @@
 
       border-color: $about-ui-color;
       border-width: 0 18px 16px 0;
+
+      @include brk-down($brk-large) {
+        bottom: -1rem;
+        right: -4rem;
+        border-width: 0 24px 24px 0;
+      }
+
+      @include brk-down($brk-small) {
+        display: none;
+      }
     }
   }
 
