--- a/assets/static/sass/components/homepage/_banner.scss
+++ b/assets/static/sass/components/homepage/_banner.scss
@@ -1,10 +1,11 @@
 .home .banner {
   background-image: url("./images/background1.jpg");
   background-size: cover;
+  background-position: center 0;
 
   .foreground {
     background-image: radial-gradient($banner-inner-color, $banner-outer-color);
-    height: 90vh;
+    height: 100vh;
     position: relative;
 
     display: flex;
@@ -12,18 +13,34 @@
     align-items: center;
     overflow: hidden;
 
+    @include brk-down($brk-tiny) {
+      height: 80vh;
+    }
+
     h1 {
       margin: 0;
       font-size: 4.5rem;
       font-family: $title-font;
 
       background-image: linear-gradient(
-        $banner-title-color 65%,
-        rgba($banner-title-color, 0.2)
+        $banner-title-color 70%,
+        rgba($banner-title-color, 0.3)
       );
       -webkit-background-clip: text;
       background-clip: text;
       color: transparent;
+
+      @include brk-down($brk-large) {
+        font-size: 4rem;
+      }
+
+      @include brk-down($brk-tiny) {
+        font-size: 3.2rem;
+      }
+
+      @include brk-down($brk-x-tiny) {
+        font-size: 2.4rem;
+      }
     }
 
     &:before {
