--- a/assets/static/style.css
+++ b/assets/static/style.css
@@ -373,10 +373,42 @@ header nav ul {
   align-items: center;
   font-size: 1.2rem;
 }
+@media (max-width: 1236px) {
+  header nav ul {
+    margin: 0 2rem;
+  }
+}
+@media (max-width: 668px) {
+  header nav ul {
+    margin: 0 1rem;
+    flex-flow: column;
+    position: relative;
+    height: 3.4rem;
+  }
+}
 header nav ul li {
   display: inline-block;
   margin: 0.4rem 0;
   padding: 0 1rem;
+}
+@media (max-width: 668px) {
+  header nav ul li.option {
+    transition: transform 0.8s cubic-bezier(0.68, -0.55, 0.27, 1.55), visibility 0.8s;
+    transform: translateX(120px);
+    align-self: flex-end;
+    margin-right: 0.8rem;
+    padding: 0.2rem 0;
+    position: relative;
+    z-index: 10;
+    visibility: collapse;
+  }
+  header nav ul li.option.expanded {
+    visibility: visible;
+    transform: translateX(0);
+  }
+  header nav ul li:nth-of-type(2) {
+    margin-top: 0.8rem;
+  }
 }
 header nav ul li.brand {
   margin-right: auto;
@@ -389,12 +421,67 @@ header nav ul li.brand .fas {
 header nav ul li:nth-of-type(n + 3) {
   border-left: 1px solid rgba(18, 58, 110, 0.4);
 }
+@media (max-width: 668px) {
+  header nav ul li:nth-of-type(n + 3) {
+    border-left: none;
+  }
+}
+header nav ul li:last-of-type {
+  display: none;
+  color: #123a6e;
+  border-left: none;
+  cursor: pointer;
+}
+@media (max-width: 668px) {
+  header nav ul li:last-of-type {
+    display: unset;
+    position: absolute;
+    right: 0;
+    top: 10px;
+    margin-right: 0.8rem;
+    padding: 0;
+  }
+}
 header nav ul li.active {
   font-weight: bold;
 }
 header nav ul li a {
   color: #123a6e;
   text-decoration: none;
+}
+
+.home header nav {
+  background-color: transparent;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 5;
+}
+.home header nav ul {
+  padding: 0.8rem 0;
+}
+.home header nav ul li:nth-of-type(n + 3) {
+  border-left: 1px solid rgba(255, 255, 255, 0.6);
+}
+@media (max-width: 668px) {
+  .home header nav ul li.option {
+    border-left: none;
+    padding: 0.2rem 0;
+  }
+}
+.home header nav ul li:last-of-type {
+  color: rgba(255, 255, 255, 0.95);
+  border-left: none;
+}
+@media (max-width: 668px) {
+  .home header nav ul li:last-of-type {
+    top: 14px;
+    padding: 0;
+  }
+}
+.home header nav ul li a {
+  color: rgba(255, 255, 255, 0.95);
 }
 
 footer {
@@ -588,24 +675,45 @@ aside nav > ul .collapsible-category ul a {
 .home .banner {
   background-image: url("./images/background1.jpg");
   background-size: cover;
+  background-position: center 0;
 }
 .home .banner .foreground {
   background-image: radial-gradient(rgba(0, 0, 0, 0.1), rgba(0, 79, 168, 0.3));
-  height: 90vh;
+  height: 100vh;
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   overflow: hidden;
 }
+@media (max-width: 480px) {
+  .home .banner .foreground {
+    height: 80vh;
+  }
+}
 .home .banner .foreground h1 {
   margin: 0;
   font-size: 4.5rem;
   font-family: "Exo 2", "Maven Pro", sans-serif;
-  background-image: linear-gradient(#d3f8e4 65%, rgba(211, 248, 228, 0.2));
+  background-image: linear-gradient(#d3f8e4 70%, rgba(211, 248, 228, 0.3));
   -webkit-background-clip: text;
   background-clip: text;
   color: transparent;
+}
+@media (max-width: 824px) {
+  .home .banner .foreground h1 {
+    font-size: 4rem;
+  }
+}
+@media (max-width: 480px) {
+  .home .banner .foreground h1 {
+    font-size: 3.2rem;
+  }
+}
+@media (max-width: 320px) {
+  .home .banner .foreground h1 {
+    font-size: 2.4rem;
+  }
 }
 .home .banner .foreground:before {
   content: "";
@@ -631,11 +739,24 @@ aside nav > ul .collapsible-category ul a {
 .home .content .about .card:first-child, .home .content .hot-post .card:first-child, .home .content .latest .card:first-child {
   background-color: transparent;
 }
+@media (max-width: 480px) {
+  .home .content .about .card:first-child, .home .content .hot-post .card:first-child, .home .content .latest .card:first-child {
+    place-self: center center;
+    padding-bottom: 0.8rem;
+    margin-bottom: 1.8rem;
+    border-bottom: 16px solid #203755;
+  }
+}
 .home .content .about .card:first-child h2, .home .content .hot-post .card:first-child h2, .home .content .latest .card:first-child h2 {
   font-size: 2rem;
   position: absolute;
   bottom: 4rem;
   right: 5rem;
+}
+@media (max-width: 480px) {
+  .home .content .about .card:first-child h2, .home .content .hot-post .card:first-child h2, .home .content .latest .card:first-child h2 {
+    position: static;
+  }
 }
 .home .content .about .card:first-child h2:after, .home .content .hot-post .card:first-child h2:after, .home .content .latest .card:first-child h2:after {
   content: "";
@@ -647,12 +768,18 @@ aside nav > ul .collapsible-category ul a {
   border: solid #203755;
   border-width: 0 12px 12px 0;
 }
+@media (max-width: 480px) {
+  .home .content .about .card:first-child h2:after, .home .content .hot-post .card:first-child h2:after, .home .content .latest .card:first-child h2:after {
+    display: none;
+  }
+}
 
 .home .content .hot-post .card:last-child, .home .content .latest .card:last-child {
   display: flex;
   align-items: center;
   justify-content: center;
   background-color: transparent;
+  padding: 2rem 1.4rem;
 }
 
 .home .content .about .card, .home .content .hot-post .card, .home .content .latest .card {
@@ -685,10 +812,20 @@ aside nav > ul .collapsible-category ul a {
   line-height: 1.3;
   font-family: "Maven Pro", "FakePearl", sans-serif;
 }
+@media (max-width: 480px) {
+  .home .content .about .card .preview, .home .content .hot-post .card .preview, .home .content .latest .card .preview {
+    height: 8rem;
+  }
+}
 
 .home .content .latest .card:nth-child(n+2):hover {
   color: #e5f1fa;
   background-color: #315581;
+}
+@media (max-width: 480px) {
+  .home .content .latest .card:nth-child(4), .home .content .latest .card:nth-child(5) {
+    display: none;
+  }
 }
 .home .content .latest .card:last-child:hover {
   color: #f8f8f8;
@@ -703,7 +840,18 @@ aside nav > ul .collapsible-category ul a {
   background-color: #fadad6;
 }
 .home .content .hot-post .card:first-child {
+  border-color: #f8f8f8;
   grid-column: 3/3;
+}
+@media (max-width: 1080px) {
+  .home .content .hot-post .card:first-child {
+    grid-column: 2/2;
+  }
+}
+@media (max-width: 668px) {
+  .home .content .hot-post .card:first-child {
+    grid-column: unset;
+  }
 }
 .home .content .hot-post .card:first-child h2 {
   left: 5rem;
@@ -713,10 +861,25 @@ aside nav > ul .collapsible-category ul a {
   border-color: #f8f8f8;
   border-width: 0 0 12px 12px;
 }
+@media (max-width: 480px) {
+  .home .content .hot-post .card:nth-child(4), .home .content .hot-post .card:nth-child(5) {
+    display: none;
+  }
+}
 .home .content .hot-post .card:last-child {
   background-color: transparent;
   grid-row: 2/2;
   grid-column: 1/1;
+}
+@media (max-width: 1080px) {
+  .home .content .hot-post .card:last-child {
+    grid-row: 3/3;
+  }
+}
+@media (max-width: 668px) {
+  .home .content .hot-post .card:last-child {
+    grid-row: unset;
+  }
 }
 .home .content .hot-post .card:last-child:hover {
   color: #f8f8f8;
@@ -726,10 +889,28 @@ aside nav > ul .collapsible-category ul a {
 .home .content .about .card:first-child {
   grid-column: 1/3;
 }
+@media (max-width: 824px) {
+  .home .content .about .card:first-child {
+    place-self: center center;
+  }
+}
+@media (max-width: 668px) {
+  .home .content .about .card:first-child {
+    grid-column: unset;
+  }
+}
 .home .content .about .card:first-child h2 {
   bottom: 6rem;
   right: 8rem;
   font-size: 3.2rem;
+}
+@media (max-width: 824px) {
+  .home .content .about .card:first-child h2 {
+    position: static;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+  }
 }
 .home .content .about .card:first-child h2:before {
   content: "";
@@ -741,6 +922,24 @@ aside nav > ul .collapsible-category ul a {
   border: solid #294d39;
   border-width: 24px 0 0 26px;
 }
+@media (max-width: 1080px) {
+  .home .content .about .card:first-child h2:before {
+    top: -5rem;
+    left: -11rem;
+  }
+}
+@media (max-width: 824px) {
+  .home .content .about .card:first-child h2:before {
+    top: -1.6rem;
+    left: -4rem;
+    border-width: 20px 0 0 20px;
+  }
+}
+@media (max-width: 480px) {
+  .home .content .about .card:first-child h2:before {
+    display: none;
+  }
+}
 .home .content .about .card:first-child h2:after {
   bottom: -2rem;
   right: -2.4rem;
@@ -748,6 +947,18 @@ aside nav > ul .collapsible-category ul a {
   height: 3.6rem;
   border-color: #294d39;
   border-width: 0 18px 16px 0;
+}
+@media (max-width: 824px) {
+  .home .content .about .card:first-child h2:after {
+    bottom: -1rem;
+    right: -4rem;
+    border-width: 0 24px 24px 0;
+  }
+}
+@media (max-width: 668px) {
+  .home .content .about .card:first-child h2:after {
+    display: none;
+  }
 }
 .home .content .about .card:nth-child(n+2) {
   background-color: #ade2d0;
@@ -757,10 +968,24 @@ aside nav > ul .collapsible-category ul a {
   background-color: #135f46;
 }
 
+@media (max-width: 480px) {
+  .home .content .about .card .preview {
+    height: 12.5rem;
+  }
+}
+@media (max-width: 480px) {
+  .home .content .about .card.name-card {
+    padding-top: 0;
+    padding-bottom: 0.8rem;
+    margin-bottom: 1.8rem;
+    border-bottom: 16px solid #294d39;
+  }
+}
 .home .content .about .card.profile-card {
   position: relative;
   background-image: url("./images/peashooter.jpg");
   background-size: cover;
+  background-position: center 40%;
   color: transparent;
 }
 .home .content .about .card.profile-card:before {
@@ -789,9 +1014,21 @@ aside nav > ul .collapsible-category ul a {
   display: block;
   margin: 0.8rem 0;
 }
+@media (max-width: 668px) {
+  .home .content .about .card.contact-card .preview {
+    height: auto;
+  }
+}
 .home .content .about .card.contact-card a {
   color: inherit;
   text-decoration: none;
+}
+@media (max-width: 720px) {
+  .home .content .about .card.contact-card a {
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+  }
 }
 .home .content .about .card.contact-card a:hover {
   color: #f6ffa9;
@@ -799,6 +1036,23 @@ aside nav > ul .collapsible-category ul a {
 .home .content .about .card.contact-card a i {
   transform: translateY(1px);
   margin-right: 0.4rem;
+}
+@media (max-width: 720px) {
+  .home .content .about .card.contact-card a i {
+    margin: 0 0 0.4rem 0;
+    transform: translateY(2px);
+  }
+  .home .content .about .card.contact-card a i:after {
+    font-weight: normal;
+    font-family: "Maven Pro", "Noto Sans TC", sans-serif;
+    margin-left: 0.8rem;
+  }
+  .home .content .about .card.contact-card a i.fa-paper-plane:after {
+    content: "E-mail";
+  }
+  .home .content .about .card.contact-card a i.fa-github-alt:after {
+    content: "GitHub";
+  }
 }
 .home .content .about .card.skill-card .preview {
   display: grid;
@@ -1359,6 +1613,22 @@ aside nav > ul .collapsible-category ul a {
   grid-template-columns: repeat(3, 1fr);
   row-gap: 0.3rem;
   column-gap: 0.3rem;
+}
+@media (max-width: 1080px) {
+  .home .content .content-wrapper {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (max-width: 668px) {
+  .home .content .content-wrapper {
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.6fr 1fr;
+  }
+}
+@media (max-width: 480px) {
+  .home .content .content-wrapper {
+    padding: 5rem 1.2rem;
+  }
 }
 
 .articles main {
