--- a/assets/static/sass/helper/_variables.scss
+++ b/assets/static/sass/helper/_variables.scss
@@ -71,9 +71,9 @@ $footer-text-color: rgb(255, 249, 240);
 
 $default-font: "Maven Pro", "Noto Sans TC", sans-serif;
 $post-font: "Maven Pro", "FakePearl", sans-serif;
-$brand-font: "Comfortaa", "Maven Pro", sans-serif;
+$brand-font: "Comfortaa", "Maven Pro", "FakePearl", sans-serif;
 $mono-font: "Ubuntu Mono", monospace;
-$title-font: "Exo 2", "Maven Pro", sans-serif;
+$title-font: "Exo 2", "Maven Pro", "Noto Sans TC", sans-serif;
 
 $brk-x-huge: 1236px;
 $brk-huge: 1080px;
