--- a/assets/static/sass/components/_sidebar_content.scss
+++ b/assets/static/sass/components/_sidebar_content.scss
@@ -15,7 +15,7 @@ aside .content {
   .profile-image {
     margin-top: 1rem;
     width: 75%;
-    background-image: url("./images/background2.jpg");
+    background-image: url("./images/peashooter.jpg");
     background-origin: border-box;
     background-size: cover;
     border-radius: 50%;
