--- a/assets/static/style.css
+++ b/assets/static/style.css
@@ -412,7 +412,7 @@ header nav ul li {
 }
 header nav ul li.brand {
   margin-right: auto;
-  font-family: "Comfortaa", "Maven Pro", sans-serif;
+  font-family: "Comfortaa", "Maven Pro", "FakePearl", sans-serif;
   font-size: 1.4rem;
 }
 header nav ul li.brand .fas {
@@ -504,6 +504,14 @@ aside {
 aside.hidden {
   transform: translateX(-320px);
 }
+@media (max-width: 668px) {
+  aside {
+    width: 240px;
+  }
+  aside.hidden {
+    transform: translateX(-240px);
+  }
+}
 aside .blur {
   position: absolute;
   top: 0;
@@ -546,7 +554,7 @@ aside .content {
 aside .content .profile-image {
   margin-top: 1rem;
   width: 75%;
-  background-image: url("./images/background2.jpg");
+  background-image: url("./images/peashooter.jpg");
   background-origin: border-box;
   background-size: cover;
   border-radius: 50%;
@@ -694,7 +702,7 @@ aside nav > ul .collapsible-category ul a {
 .home .banner .foreground h1 {
   margin: 0;
   font-size: 4.5rem;
-  font-family: "Exo 2", "Maven Pro", sans-serif;
+  font-family: "Exo 2", "Maven Pro", "Noto Sans TC", sans-serif;
   background-image: linear-gradient(#d3f8e4 70%, rgba(211, 248, 228, 0.3));
   -webkit-background-clip: text;
   background-clip: text;
@@ -1091,8 +1099,18 @@ aside nav > ul .collapsible-category ul a {
 .articles main .main-wrapper a.post-link:nth-of-type(4n + 1) {
   grid-column: 1/3;
 }
+@media (max-width: 824px) {
+  .articles main .main-wrapper a.post-link:nth-of-type(4n + 1) {
+    grid-column: 1/1;
+  }
+}
 .articles main .main-wrapper a.post-link:nth-of-type(4n) {
   grid-column: 2/4;
+}
+@media (max-width: 824px) {
+  .articles main .main-wrapper a.post-link:nth-of-type(4n) {
+    grid-column: 1/1;
+  }
 }
 .articles main .main-wrapper a.post-link:hover {
   color: #f4f9ff;
@@ -1100,23 +1118,33 @@ aside nav > ul .collapsible-category ul a {
 .articles main .main-wrapper a.post-link:hover time {
   color: #f4f9ff;
 }
-.articles main .main-wrapper a.post-link:nth-of-type(3n) {
-  background-color: #dcecff;
+@media (min-width: 824px) {
+  .articles main .main-wrapper a.post-link:nth-of-type(3n) {
+    background-color: #dcecff;
+  }
+  .articles main .main-wrapper a.post-link:nth-of-type(3n):hover {
+    background-color: #2e5180;
+  }
+  .articles main .main-wrapper a.post-link:nth-of-type(3n + 1) {
+    background-color: #cce4ff;
+  }
+  .articles main .main-wrapper a.post-link:nth-of-type(3n + 1):hover {
+    background-color: #1d4270;
+  }
+  .articles main .main-wrapper a.post-link:nth-of-type(3n + 2) {
+    background-color: #c3deff;
+  }
+  .articles main .main-wrapper a.post-link:nth-of-type(3n + 2):hover {
+    background-color: #37699e;
+  }
 }
-.articles main .main-wrapper a.post-link:nth-of-type(3n):hover {
-  background-color: #2e5180;
-}
-.articles main .main-wrapper a.post-link:nth-of-type(3n + 1) {
-  background-color: #cce4ff;
-}
-.articles main .main-wrapper a.post-link:nth-of-type(3n + 1):hover {
-  background-color: #1d4270;
-}
-.articles main .main-wrapper a.post-link:nth-of-type(3n + 2) {
-  background-color: #c3deff;
-}
-.articles main .main-wrapper a.post-link:nth-of-type(3n + 2):hover {
-  background-color: #37699e;
+@media (max-width: 824px) {
+  .articles main .main-wrapper a.post-link {
+    background-color: #dcecff;
+  }
+  .articles main .main-wrapper a.post-link:hover {
+    background-color: #2e5180;
+  }
 }
 .articles main .main-wrapper article {
   padding: 0.8rem 1.2rem;
@@ -1149,25 +1177,18 @@ aside nav > ul .collapsible-category ul a {
 
 .articles .banner {
   height: 40vh;
+  position: relative;
   display: flex;
   flex-flow: column;
   justify-content: center;
   overflow: hidden;
   background-image: radial-gradient(circle at top left, rgba(134, 217, 255, 0.9) -15%, rgba(255, 220, 196, 0.4) 60%), radial-gradient(circle at bottom right, rgba(140, 251, 255, 0.9) -10%, rgba(255, 220, 196, 0.4) 80%);
 }
-.articles .banner h1 {
-  margin: 0 auto;
-  position: relative;
-  font-size: 3rem;
-  font-family: "Exo 2", "Maven Pro", sans-serif;
-  color: rgba(3, 48, 26, 0.75);
-  z-index: 3;
-}
-.articles .banner h1:after {
+.articles .banner:after {
   content: "";
   display: inline-block;
   position: absolute;
-  top: 50%;
+  top: 43%;
   left: 50%;
   margin: -14rem;
   height: 20rem;
@@ -1176,6 +1197,46 @@ aside nav > ul .collapsible-category ul a {
   border-width: 0 0 8rem 8rem;
   transform: rotateZ(-45deg);
   z-index: 2;
+}
+@media (max-width: 824px) {
+  .articles .banner:after {
+    content: "";
+    display: inline-block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: -11.5rem;
+    height: 16rem;
+    width: 16rem;
+    border: solid rgba(255, 255, 255, 0.4);
+    border-width: 0 0 7rem 7rem;
+    transform: rotateZ(-45deg);
+    z-index: 2;
+  }
+}
+@media (max-width: 668px) {
+  .articles .banner:after {
+    content: "";
+    display: inline-block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: -10rem;
+    height: 14rem;
+    width: 14rem;
+    border: solid rgba(255, 255, 255, 0.4);
+    border-width: 0 0 6rem 6rem;
+    transform: rotateZ(-45deg);
+    z-index: 2;
+  }
+}
+.articles .banner h1 {
+  margin: 0 auto;
+  position: relative;
+  font-size: 3rem;
+  font-family: "Exo 2", "Maven Pro", "Noto Sans TC", sans-serif;
+  color: rgba(3, 48, 26, 0.75);
+  z-index: 3;
 }
 
 .postpage article .post-content {
@@ -1562,7 +1623,7 @@ aside nav > ul .collapsible-category ul a {
   margin: 0 auto;
   position: relative;
   font-size: 3rem;
-  font-family: "Exo 2", "Maven Pro", sans-serif;
+  font-family: "Exo 2", "Maven Pro", "Noto Sans TC", sans-serif;
   color: rgba(116, 7, 7, 0.8);
   z-index: 3;
 }
@@ -1648,6 +1709,23 @@ aside nav > ul .collapsible-category ul a {
   grid-template-columns: 1fr 1fr 1fr;
   grid-auto-rows: 18rem;
   gap: 0.2rem 0.2rem;
+}
+@media (max-width: 824px) {
+  .articles .main-wrapper {
+    grid-template-columns: 1fr;
+    padding: 3rem 2.4rem;
+    row-gap: 0.5rem;
+  }
+}
+@media (max-width: 668px) {
+  .articles .main-wrapper {
+    row-gap: 1rem;
+  }
+}
+@media (max-width: 480px) {
+  .articles .main-wrapper {
+    padding: 2rem 1.6rem;
+  }
 }
 
 .postpage main {
