--- a/assets/static/sass/components/_navbar.scss
+++ b/assets/static/sass/components/_navbar.scss
@@ -134,3 +134,11 @@ header nav {
     }
   }
 }
+
+.postpage header nav {
+  .option a {
+    @include brk-down($brk-small) {
+      color: rgba($postpage-ui-color, 0.9);
+    }
+  }
+}
