--- a/assets/static/sass/components/_sidebar_content.scss
+++ b/assets/static/sass/components/_sidebar_content.scss
@@ -32,5 +32,10 @@ aside .content {
     margin-top: 1.5rem;
     font-size: 1.8rem;
     font-weight: bold;
+
+    @include brk-down($brk-small) {
+      margin-top: 1.2rem;
+      font-size: 1.4rem;
+    }
   }
 }
