--- a/assets/static/sass/components/post/_adjacent_post.scss
+++ b/assets/static/sass/components/post/_adjacent_post.scss
@@ -1,8 +1,25 @@
 .postpage .adjacent-posts {
-  margin-top: 3rem;
+  margin-top: 2.5rem;
   padding-left: 2.5rem;
   display: flex;
   flex-flow: column;
+
+  @include brk-down($brk-huge) {
+    padding: 0 2rem;
+  }
+
+  @include brk-down($brk-large) {
+    margin-top: 1.8rem;
+    padding: 0 1rem;
+  }
+
+  @include brk-down($brk-small) {
+    margin-top: 1.4rem;
+  }
+
+  @include brk-down($brk-x-tiny) {
+    margin-top: 1rem;
+  }
 
   span {
     display: inline-block;
@@ -38,9 +55,22 @@
   .prev {
     text-align: right;
     margin-right: auto;
+    margin-top: 1rem;
 
     i {
       margin-right: 1rem;
+    }
+  }
+
+  @include brk-down($brk-tiny) {
+    .next {
+      align-self: center;
+      margin-left: 2rem;
+      min-width: 0;
+    }
+    .prev {
+      align-self: center;
+      margin-right: 2rem;
     }
   }
 }
