--- a/assets/static/sass/components/_navbar.scss
+++ b/assets/static/sass/components/_navbar.scss
@@ -18,8 +18,6 @@ header nav {
       flex-flow: column;
       position: relative;
       height: 3.4rem;
-      // overflow-x: hidden;
-      // overflow-y: visible;
     }
 
     li {
@@ -34,7 +32,7 @@ header nav {
           transform: translateX(120px);
           align-self: flex-end;
           margin-right: 0.8rem;
-          padding: 0.2rem 0;
+          padding: 0;
           position: relative;
           z-index: 10;
           visibility: collapse;
@@ -46,7 +44,7 @@ header nav {
         }
 
         &:nth-of-type(2) {
-          margin-top: 0.8rem;
+          margin-top: 1rem;
         }
       }
 
@@ -115,7 +113,9 @@ header nav {
       @include brk-down($brk-small) {
         &.option {
           border-left: none;
-          padding: 0.2rem 0;
+        }
+        &:nth-of-type(2) {
+          margin-top: 0.8rem;
         }
       }
 
@@ -135,10 +135,26 @@ header nav {
   }
 }
 
+.articles header nav {
+  .option a {
+    @include brk-down($brk-small) {
+      color: rgba($navbar-text-color, 0.9);
+    }
+  }
+}
+
 .postpage header nav {
   .option a {
     @include brk-down($brk-small) {
       color: rgba($postpage-ui-color, 0.9);
+    }
+  }
+}
+
+.portfolio header nav {
+  .option a {
+    @include brk-down($brk-small) {
+      color: rgba($portfolio-title-color, 0.8);
     }
   }
 }
