--- a/assets/static/sass/components/articles/_banner.scss
+++ b/assets/static/sass/components/articles/_banner.scss
@@ -37,5 +37,9 @@
     font-family: $title-font;
     color: rgba($articles-title-color, 0.75);
     z-index: 3;
+
+    @include brk-down($brk-tiny) {
+      font-size: 2.4rem;
+    }
   }
 }
