[UPDATE] posts in articles page and pagination; minor fixes

--- a/assets/static/sass/_style.scss
+++ b/assets/static/sass/_style.scss
@@ -13,6 +13,7 @@
 @import "./components/overlay";
 @import "./components/placeholder";
 @import "./components/scroll_top";
+@import "./components/pagination";
 
 @import "./components/homepage/banner";
 @import "./components/homepage/card_deck";
