--- a/assets/static/sass/helper/_variables.scss
+++ b/assets/static/sass/helper/_variables.scss
@@ -33,6 +33,10 @@ $articles-banner-color1: rgb(140, 251, 255);
 $articles-banner-color2: rgb(255, 220, 196);
 $articles-banner-color3: rgb(134, 217, 255);
 
+$pagination-active-color: rgb(30, 100, 183);
+$pagination-hover-color: rgb(180, 210, 255);
+$pagination-disabled-color: rgb(138, 169, 218);
+
 $post-color0: rgb(220, 236, 255);
 $post-color1: rgb(204, 228, 255);
 $post-color2: rgb(195, 222, 255);
