--- a/assets/static/sass/components/articles/_post.scss
+++ b/assets/static/sass/components/articles/_post.scss
@@ -64,6 +64,7 @@
   }
 
   article {
+    flex: 1;
     padding: 0.8rem 1.2rem;
     overflow-y: hidden;
 
@@ -76,6 +77,7 @@
 
     h2 {
       margin: 0 auto 0 0;
+      padding-right: 1rem;
       font-size: 1.8rem;
 
       @include brk-down($brk-small) {
