--- a/assets/static/sass/layout/_articles.scss
+++ b/assets/static/sass/layout/_articles.scss
@@ -1,8 +1,6 @@
 .articles {
   main {
     display: flex;
-    flex-flow: column;
-    align-items: center;
 
     background-color: $articles-page-color;
     color: $articles-ui-color;
@@ -13,8 +11,10 @@
   }
 
   .main-wrapper {
-    padding: 5rem 3rem;
+    padding: 5rem 3rem 2rem;
     max-width: 1200px;
+    flex: 1;
+    margin: 0 auto;
 
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
