--- a/templates/articles.html
+++ b/templates/articles.html
@@ -1,4 +1,6 @@
 {% extends "layout-normal.html" %}
+{% from "macros/card.html" import render_article_post %}
+{% from "macros/pagination.html" import render_pagination %}
 {% block title %}Articles - skyblog{% endblock %}
 
 {% block banner %}
@@ -7,22 +9,13 @@
 {% block main %}
   <main>
     <div class="main-wrapper">
-      {% for item in range(9) %}
-        <a href="{{ './post'|url }}" class="post-link">
-          <article>
-            <div class="info">
-              <h2>Hello world</h2>
-              <time>2021 - 02 - 01</time>
-            </div>
-            <p class="preview">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt 你好啊 ut labore et dolore magna aliqua.
-              Ut enim ad minim veniam,
-            </p>
-          </article>
-        </a>
+      {% for post in this.pagination.items %}
+        {{ render_article_post(post) }}
       {% endfor %}
     </div>
   </main>
+  {% if this.pagination.pages > 1 %}
+    {{ render_pagination(this.pagination) }}
+  {% endif %}
 {% endblock %}
 
