--- a/templates/macros/card.html
+++ b/templates/macros/card.html
@@ -8,3 +8,17 @@
     </p>
   </a>
 {% endmacro %}
+
+{% macro render_article_post(post) %}
+  <a href="{{ post.path|url }}" class="post-link">
+    <article>
+      <div class="info">
+        <h2>{{ post.title }}</h2>
+        <time>{{ post.pub_date.strftime('%Y - %m - %d') }}</time>
+      </div>
+      <p class="preview">
+        {{ post.body|striphtmltags|truncate(500) }}
+      </p>
+    </article>
+  </a>
+{% endmacro %}
