--- a/assets/static/sass/components/articles/_post.scss
+++ b/assets/static/sass/components/articles/_post.scss
@@ -79,7 +79,8 @@
       margin: 0 auto 0 0;
       padding-right: 1rem;
       font-size: 1.8rem;
-
+      line-height: 1.3;
+      
       @include brk-down($brk-small) {
         font-size: 1.6rem;
       }
