--- a/assets/static/style.css
+++ b/assets/static/style.css
@@ -1248,6 +1248,7 @@ aside nav > ul .collapsible-category ul a {
   margin: 0 auto 0 0;
   padding-right: 1rem;
   font-size: 1.8rem;
+  line-height: 1.3;
 }
 @media (max-width: 668px) {
   .articles main .main-wrapper article h2 {
