--- a/assets/static/sass/components/post/_toc.scss
+++ b/assets/static/sass/components/post/_toc.scss
@@ -3,7 +3,7 @@
     position: fixed;
     right: 0;
     bottom: 8rem;
-    max-width: 220px;
+    width: 220px;
     max-height: 50vh;
     overflow-y: auto;
     padding: 0 1.2rem 0 0;
@@ -13,7 +13,7 @@
     visibility: visible;
 
     @include brk-down($brk-x-huge) {
-      max-width: 160px;
+      width: 160px;
       max-height: 40vh;
     }
 
