--- a/assets/static/style.css
+++ b/assets/static/style.css
@@ -1730,7 +1730,7 @@ aside nav > ul .collapsible-category ul a {
   position: fixed;
   right: 0;
   bottom: 8rem;
-  max-width: 220px;
+  width: 220px;
   max-height: 50vh;
   overflow-y: auto;
   padding: 0 1.2rem 0 0;
@@ -1740,7 +1740,7 @@ aside nav > ul .collapsible-category ul a {
 }
 @media (max-width: 1296px) {
   .postpage .toc-wrapper {
-    max-width: 160px;
+    width: 160px;
     max-height: 40vh;
   }
 }
