--- a/templates/macros/post.html
+++ b/templates/macros/post.html
@@ -11,19 +11,24 @@
 {% endmacro %}
 
 {% macro render_adj_post(post) %}
+  {% set siblings = post.get_siblings() %}
   <section class="adjacent-posts">
+  {% if siblings.prev_page %}
     <div class="next">
       <span>Next Post</span>
-      <a href="#">
-        <h3>Hello wow! <i class="fas fa-chevron-right"></i></h3>
+      <a href="{{ siblings.prev_page|url }}">
+        <h3>{{ siblings.prev_page.title }} <i class="fas fa-chevron-right"></i></h3>
       </a>
     </div>
+  {% endif %}
+  {% if siblings.next_page %}
     <div class="prev">
       <span>Prev Post</span>
-      <a href="#">
-        <h3><i class="fas fa-chevron-left"></i> Hello bye!</h3>
+      <a href="{{ siblings.next_page|url }}">
+        <h3><i class="fas fa-chevron-left"></i> {{ siblings.next_page.title }}</h3>
       </a>
     </div>
+  {% endif %}
   </section>
 {% endmacro %}
 
