--- a/templates/post.html
+++ b/templates/post.html
@@ -11,50 +11,12 @@
 {% block main %}
   <section class="toc-wrapper hidden" id="toc">
     <ul class="toc">
-      <li>
-        <a href="#">Markdown: Syntax</a>
-        <ul>
-          <li>
-            <a href="#overview">Overview</a>
-            <ul>
-              <li><a href="#philosophy">Philosophy</a></li>
-              <li><a href="#html">Inline HTML</a></li>
-              <li>
-                <a href="#autoescape"
-                >Automatic Escaping for Special Characters</a
-                >
-              </li>
-            </ul>
-          </li>
-          <li>
-            <a href="#block">Block Elements</a>
-            <ul>
-              <li><a href="#p">Paragraphs and Line Breaks</a></li>
-              <li><a href="#header">Headers</a></li>
-              <li><a href="#blockquote">Blockquotes</a></li>
-              <li><a href="#list">Lists</a></li>
-              <li><a href="#precode">Code Blocks</a></li>
-              <li><a href="#hr">Horizontal Rules</a></li>
-            </ul>
-          </li>
-          <li>
-            <a href="#span">Span Elements</a>
-            <ul>
-              <li><a href="#link">Links</a></li>
-              <li><a href="#em">Emphasis</a></li>
-              <li><a href="#code">Code</a></li>
-              <li><a href="#img">Images</a></li>
-            </ul>
-          </li>
-          <li>
-            <a href="#misc">Miscellaneous</a>
-            <ul>
-              <li><a href="#backslash">Backslash Escapes</a></li>
-              <li><a href="#autolink">Automatic Links</a></li>
-            </ul>
-          </li>
-        </ul>
-      </li>
+      {% for item in this.body.toc recursive %}
+        {% if loop.depth <= 3 %}
+          <li><a href="#{{ item.anchor }}">{{ item.title }}</a>{% if item.children %}
+            <ul>{{ loop(item.children) }}</ul>{% endif %}</li>
+        {% endif %}
+      {% endfor %}
     </ul>
   </section>
 
@@ -65,13 +27,14 @@
   </main>
 
   <figure class="modal hidden" id="modal">
-    <img src="../images/peashooter.jpg" alt=""/>
+    <img src="" alt=""/>
     <figcaption>Alt text</figcaption>
   </figure>
 {% endblock %}
 
 {% block scripts %}
   {{ super() }}
+  <script src="{{ '/static/js/trim_codeblock.js'|url }}"></script>
   <script src="{{ '/static/js/line_numbers.js'|url }}"></script>
   <script src="{{ '/static/js/toc.js'|url }}"></script>
   <script src="{{ '/static/js/post_image.js'|url }}"></script>
